...
          }}
        />
      )}

      {searchResults.length === 0 && searchQuery.length === 0 && (
        <Button onPress={submit} style={{ marginTop: 30 }}>
          <Text text="Save" />
        </Button>
      )}
    </View>
  )
}

...
