...
      icon: LucideActivitySquare,
    },
    diagnoses: {
      onPress: handleDiagnosesPress,
      label: translate("common:diagnoses"),
      description: translate("patientFile:actions.diagnosisDescription"),
      testID: "patient-diagnoses-btn",
      icon: LucideClipboardList,
    },
  }

  if (isLoading) {
    return (
...
