...
            <TouchableOpacity onPress={handleBack} style={$backButton}>
              <LucideArrowLeft size={24} color={colors.palette.primary700} />
            </TouchableOpacity>
          </If>
          <If condition={!back}>
            <TouchableOpacity onPress={handleDrawer} style={$backButton}>
              <LucideMenu testID="drawerButton" size={24} color={colors.palette.primary700} />
            </TouchableOpacity>
          </If>

          {/*<SyncButtonIndicator />*/}
        </If>

...
