...
            <Button
              id="login-button"
              disabled={loadingAuth}
              onClick={handleLogin}
              className="w-full"
            >
              {loadingAuth ? "Signing in..." : "Sign in"}
            </Button>
          </div>
        </div>
      </div>
    </div>
  );
...
