...
    await SecureStorage.deleteItemAsync("provider_token")

    if (navigationRef.isReady()) {
      navigationRef.dispatch(
        CommonActions.reset({
          index: 0,
          routes: [{ name: "Patients" }],
        }),
      )
    }

    providerStore.trigger.reset()
  }
...
